    * more const correctness issues regarding getopt()
    * disable building pst2dii on cygwin, since the convert program
      on the path is part of windows, not image magic.
    * consistent ordering of our include files. all system includes
      protected by ifdef HAVE_ from autoconf.
    * strip and regenerate all MIME headers to avoid duplicates.
    * do a better job of making unique MIME boundaries.
    * only use base64 coding when strictly necessary.

LibPST 0.6.25 (2009-01-16)
===============================
    * improve handling of content-type charset values in mime parts

LibPST 0.6.24 (2008-12-11)
===============================
    * patch from Chris Eagle to build on cygwin

LibPST 0.6.23 (2008-12-04)
===============================
    * bump version to avoid cvs tagging mistake in fedora

LibPST 0.6.22 (2008-11-28)
===============================
    * patch from David Cuadrado to process emails with type PST_TYPE_OTHER
    * base64_encode_multiple() may insert newline, needs larger malloc
    * subject lines shorter than 2 bytes could segfault

LibPST 0.6.21 (2008-10-21)
===============================
    * fix title bug with old schema in pst2ldif.
    * also escape commas in distinguished names per rfc4514.

LibPST 0.6.20 (2008-10-09)
===============================
    * add configure option --enable-dii=no to remove dependency on libgd.
    * many fixes in pst2ldif by Robert Harris.
    * add -D option to include deleted items, from Justin Greer
    * fix from Justin Greer to add missing email headers
    * fix from Justin Greer for my_stristr()
    * fix for orphan children when building descriptor tree
    * avoid writing uninitialized data to debug log file
    * remove unreachable code
    * create dummy top-of-folder descriptor if needed for corrupt pst files

LibPST 0.6.19 (2008-09-14)
===============================
    * Fix base64 encoding that could create long lines